I changed application hub to application software

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <div class="text-center mb-10">
       <div class="inline-flex items-center justify-center w-16 h-16 bg-white/20 backdrop-blur rounded-2xl text-3xl mb-4">✈️</div>
       <h1 class="text-3xl font-extrabold text-white tracking-tight">NonStop Travels</h1>
-      <p class="text-emerald-300 mt-1 text-sm font-medium">Application Management Hub</p>
+      <p class="text-emerald-300 mt-1 text-sm font-medium">Application Management software</p>
     </div>
 
     <div class="bg-white rounded-2xl shadow-2xl p-8">
